--- a/style.css
+++ b/style.css
@@ -99,6 +99,13 @@ section {
   text-decoration: underline;
 }
 
+.edu-description {
+  margin-top: 6px;
+  font-size: 0.95rem;
+  color: #555;
+  line-height: 1.6;
+}
+
 /* Certifications */
 #certifications {
   margin-top: 12px;
